<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/usuarioLogueo"
        android:textSize="20sp" 
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/InputPass"
        android:layout_marginTop="28dp"
        android:text="@string/tituloLogueo"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/InputUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/InputUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/claveLogueo"
        android:textSize="20sp" 
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/InputPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/BotonLogueo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/InputPass"
        android:layout_marginTop="48dp"
        android:gravity="left|center_vertical"
        android:text="@string/etiqBotonEnviar" />

    <TextView
        android:id="@+id/EtiquetaLogueado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BotonLogueo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/etiqVacia"
        android:textSize="20sp" />

</RelativeLayout>
